--- a/mvc-dotnet/Repository/Repository.csproj
+++ b/mvc-dotnet/Repository/Repository.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IoC\IoC.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
